# python-project-50

./: .gitignore  README.md  pyproject.toml
gendiff/scripts/: gendiff.py
