[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = "Student project #2"
authors = ["Vladimir Ustyanivsky <bender1102@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:help"